--- a/Lab2_parte2.ipynb
+++ b/Lab2_parte2.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "## Processamento Digital de Imagens\n",
     "\n",
-    "**Autores:** Igor Ladeia de freitas, Nome Completo 2, Nome Completo 3  \n",
+    "**Autores:** Igor Ladeia de freitas (RA11201922180), Gustavo Fernandes do Nascimento (RA11202021700), Ryan Lucas da Silva (RA11202522362), Eduardo Yukio Makita (RA11202020221) \n",
     "**Data de realização:**21/02/2026  \n",
-    "**Data de publicação:** XX/XX/2026  "
+    "**Data de publicação:** 27/02/2026  "
    ]
   },
   {
